put function is crashed
